--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,5 +9,8 @@ page-home {
   }
   .site-item {
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    &.selected {
+      background: color($colors, "light");
+    }
   }
 }
