--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,26 @@
-<ion-menu [content]="content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-split-pane>
+  <ion-menu [content]="content">
+    <ion-header>
+      <ion-toolbar color="dark">
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <button ion-item [ngClass]="{'selected': api.selected == site }" (click)="selectSite(site)" class="site-item" *ngFor="let site of api.sites">
+          <ion-avatar item-left>
+            <img [src]="site.url + 'img/icon.png'">
+          </ion-avatar>
+          <h2 color="dark" ion-text>
+            {{site.site}}
+          </h2>
+          <ion-note>
+            {{site.url}}
+          </ion-note>
+        </button>
+      </ion-list>
+    </ion-content>
 
-  <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
-    </ion-list>
-  </ion-content>
-
-</ion-menu>
-
-<!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+  </ion-menu>
+  <ion-nav main [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+</ion-split-pane>
