--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,5 @@
 // http://ionicframework.com/docs/theming/
 
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +13,14 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.site-item {
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+  &.selected {
+    background: color($colors, "light");
+  }
+}
+@media only screen and (min-width: 600px) {
+  ion-menu {
+    max-width: 200px !important;
+  }
+}
